# rules_isort

./: .bazelrc  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  searchindex.js  searchindex.json  version.bzl
.github/: release_notes.template
.github/workflows/: ci.yaml  compile-requirements.yaml  release.yaml
docs/: BUILD.bazel  book.toml
python/isort/: defs.bzl  repositories.bzl
python/isort/private/: BUILD.bazel  isort.bzl  isort_fixer.py  isort_runner.py
python/isort/private/tests/: BUILD.bazel  isort_regex_test.bzl  isort_regex_test.py  test_requirements.in  test_requirements_linux.txt  test_requirements_macos.txt  test_requirements_windows.txt
python/isort/private/tests/duplicate_name/consumer/: BUILD.bazel
python/isort/private/tests/namespaces/example/: BUILD.bazel
python/isort/private/tests/repo_version/: BUILD.bazel  version_test.py
python/isort/private/tests/simple/: BUILD.bazel
