load("@rules_venv//python:defs.bzl", "py_test")

py_test(
    name = "version_test",
    srcs = ["version_test.py"],
    data = [
        "//:MODULE.bazel",
        "//:version.bzl",
    ],
    env = {
        "MODULE_BAZEL": "$(rlocationpath //:MODULE.bazel)",
        "VERSION_BZL": "$(rlocationpath //:version.bzl)",
    },
    # TODO: https://github.com/bazelbuild/rules_python/issues/2141
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "@rules_venv//python/runfiles",
    ],
)
